@@ -1,6 +1,7 @@
 2.1.16
  * Fix filtering on clustering columns when 2i is used (CASSANDRA-11907)
  * Reduce contention getting instances of CompositeType (CASSANDRA-10433)
+ * Improve digest calculation in the presence of overlapping tombstones (CASSANDRA-11349)
 
 2.1.15
  * Account for partition deletions in tombstone histogram (CASSANDRA-12112)
